# spotify-dl

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: build-latest.yml  build-linux.yml  build-macos.yml  build-windows.yml  create-release.yml  linux.yml  macos.yml  release.yml  rust.yml  windows.yml
src/: channel_sink.rs  download.rs  file_sink.rs  lib.rs  log.rs  main.rs  session.rs  track.rs  utils.rs
src/encoder/: flac.rs  mod.rs  mp3.rs  tags.rs
src/stream/: mod.rs  stream.rs
