[package]
name = "spotify-dl"
version = "0.2.1"
authors = ["Guillem Castro <guillemcastro4@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GuillemCastro/spotify-dl"
repository = "https://github.com/GuillemCastro/spotify-dl"

[dependencies]
structopt = { version = "0.3", default-features = false }
rpassword = "7.0"
indicatif = "0.17"
librespot = "0.4.2"
tokio = { version = "1", features = ["full", "tracing"] }
flac-bound = { version = "0.3.0", default-features = false, features = ["libflac-noogg"] }
audiotags = "0.5"
regex = "1.7.1"
machine-uid = "0.5.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
lazy_static = "1.4"
async-trait = "0.1"
dirs = "5.0"

[package.metadata.deb]
depends="libflac-dev"
