[package]
name = "spotify-dl"
version = "0.5.4"
authors = ["Guillem Castro <guillemcastro4@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GuillemCastro/spotify-dl"
repository = "https://github.com/GuillemCastro/spotify-dl"
description = "A command-line utility to download songs and playlists from Spotify"

[dependencies]
bytes = "1"
structopt = { version = "0.3", default-features = false }
rpassword = "7.0"
indicatif = "0.17"
librespot = { version = "0.6.0", default-features = false }
tokio = { version = "1", features = ["full", "tracing"] }
flacenc = { version = "0.4" }
audiotags = "0.5"
regex = "1.7.1"
machine-uid = "0.5.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
lazy_static = "1.4"
async-trait = "0.1"
dirs = "5.0"
mp3lame-encoder = { version = "0.1.5", optional = true }
futures = "0.3"
rayon = "1.10"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
id3 = "0.6"
serde_json = "1.0.117"

[features]
default = ["mp3"]
mp3 = ["dep:mp3lame-encoder"]
