[package]
name = "spotify-dl"
version = "0.9.1"
authors = ["Guillem Castro <guillemcastro4@gmail.com>"]
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GuillemCastro/spotify-dl"
repository = "https://github.com/GuillemCastro/spotify-dl"
description = "A command-line utility to download songs and playlists from Spotify"

[dependencies]
structopt = { version = "0.3", default-features = false }
indicatif = "0.18"
librespot = { version = "0.6.0", default-features = false }
tokio = { version = "1", features = ["full", "tracing"] }
flacenc = { version = "0.4" }
audiotags = "0.5"
regex = "1.11.1"
machine-uid = "0.5.3"
anyhow = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
lazy_static = "1.5"
async-trait = "0.1.88"
dirs = "6.0"
mp3lame-encoder = { version = "0.2.1", optional = true }
futures = "0.3.31"
bytes = "1.10.1"
id3 = "1.16.3"
tryhard = "0.5.2"
thiserror = "2.0.12"
console = "0.16.0"
tracing-appender = "0.2.3"
once_cell = "1.21.3"

[features]
default = ["mp3"]
mp3 = ["dep:mp3lame-encoder"]
